# mibigger

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  existing_mibig_entries.csv  pre-commit  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template_change.md  pull_request_template_new.md
mibig_input_script/aux/: validation_mibig.py  verify_existence_entry.py
mibig_input_script/classes/: class_base.py  class_changelog.py  class_ripp.py
mibigger/: all_mibig_entries.csv  curators.csv  main.py
mibigger/aux/: check_valid.py  parse_arguments.py  read_functions.py  schema.json  validation_mibig.py
mibigger/classes/: class_base.py  class_changelog.py  class_genes.py  class_mibig_entry.py  class_ripp.py  class_write_mibig.py
mibigger/helper/: check_valid.py  parse_arguments.py  schema.json  validation_mibig.py
mibigger/known_values/: ripp_subclasses.json  ripp_tailoring.json
mibigger/mibig_curr_ver/: BGC0000031.json  BGC0000038.json  BGC0000041.json  BGC0000065.json  BGC0000072.json  BGC0000214.json  BGC0000243.json  BGC0000244.json  BGC0000265.json  BGC0000270.json  BGC0000294.json  BGC0000311.json  BGC0000332.json  BGC0000374.json  BGC0000384.json  BGC0000412.json  BGC0000432.json  BGC0000455.json  BGC0000458.json  BGC0000468.json  BGC0000469.json  BGC0000470.json  BGC0000548.json  BGC0000558.json  BGC0000581.json  BGC0000602.json  BGC0000627.json  BGC0000819.json  BGC0000849.json  BGC0000885.json  BGC0000962.json  BGC0000965.json  BGC0000972.json  BGC0001055.json  BGC0001074.json  BGC0001106.json  BGC0001157.json  BGC0001182.json  BGC0001281.json  BGC0001356.json  (+50 more)
mibigger/mibig_next_ver/: BGC0002077.json  BGC0002750.json  BGC0002751.json  BGC0002752.json  (+15 more)
tests/: check_valid.py  gene_ann.json  ripp_ann.json
(+24 files in other folders)
